finalised html layout + added test logo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,58 @@
     <link rel="stylesheet" href="styles/style.css">
     <title>Document</title>
 </head>
+
 <body>
     Hello world!
+    <div class="header">
+        <img src="img/test_logo.png">
+        <ul>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+        </ul>
+    </div>
+    <div class="content-head">
+        <h2>This website is awesome</h2>
+        <button>Sign up</button>
+        <div>this is a placeholder for an image</div>
+    </div>
+    <div class="content-info">
+        <h2>Some random information.</h2>
+        <div class="image-box">
+            <div class="image"></div>
+            <div class="subtext">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="image-box">
+            <div class="image"></div>
+            <div class="subtext">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="image-box">
+            <div class="image"></div>
+            <div class="subtext">this is some subtext under an illustration or image</div>
+        </div>
+        <div class="image-box">
+            <div class="image"></div>
+            <div class="subtext">this is some subtext under an illustration or image</div>
+        </div>
+    </div>
+    <div class="content-quote">
+        <div class="quote">This is an inspiring quote or a testimonial from a customer. Maybe its just filling up space
+            or maybe people will actually read it. Who knows? All I know is that it looks nice.
+        </div>
+        <div class="author">-Thor, God of Thunder</div>
+    </div>
+    <div class="content-signup">
+        <div class="cta-box">
+            <h2>Call to action! it's time!</h2>
+            <div>Sign up for our product by clicking that button right over there!</div>
+            <button>Sign up</button>
+        </div>
+    </div>
+    <div class="footer">
+        Copyright © The Odin Project 2022
+    </div>
+
 </body>
+
 </html>
