--- a/index.html
+++ b/index.html
@@ -6,25 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
-    Hello world!
-    <div class="header">
-        <img src="img/test_logo.png">
-        <ul>
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
+    <div class="container header">
+        <div class ="logo">Header Logo</div>
+        <ul class="links">
+            <li class="link"><a href="#">header link one</a></li>
+            <li class="link"><a href="#">header link two</a></li>
+            <li class="link"><a href="#">header link three</a></li>
         </ul>
     </div>
-    <div class="content-head">
+    <div class="container content-head">
         <h2>This website is awesome</h2>
         <button>Sign up</button>
         <div>this is a placeholder for an image</div>
     </div>
-    <div class="content-info">
+    <div class="container content-info">
         <h2>Some random information.</h2>
         <div class="image-box">
             <div class="image"></div>
@@ -43,20 +45,20 @@
             <div class="subtext">this is some subtext under an illustration or image</div>
         </div>
     </div>
-    <div class="content-quote">
+    <div class="container content-quote">
         <div class="quote">This is an inspiring quote or a testimonial from a customer. Maybe its just filling up space
             or maybe people will actually read it. Who knows? All I know is that it looks nice.
         </div>
         <div class="author">-Thor, God of Thunder</div>
     </div>
-    <div class="content-signup">
+    <div class="container content-signup">
         <div class="cta-box">
             <h2>Call to action! it's time!</h2>
             <div>Sign up for our product by clicking that button right over there!</div>
             <button>Sign up</button>
         </div>
     </div>
-    <div class="footer">
+    <div class="container footer">
         Copyright © The Odin Project 2022
     </div>
 
