finished header section

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet"> 
+    <title>Landing Page</title>
 </head>
 
 <body>
     <div class="container header">
-        <div class ="logo">Header Logo</div>
+        <div class="logo">Header Logo</div>
         <ul class="links">
             <li class="link"><a href="#">header link one</a></li>
             <li class="link"><a href="#">header link two</a></li>
@@ -22,9 +22,16 @@
         </ul>
     </div>
     <div class="container content-head">
-        <h2>This website is awesome</h2>
-        <button>Sign up</button>
-        <div>this is a placeholder for an image</div>
+        <div class="head-box">
+            <h2>This website is awesome</h2>
+            <div class="subtext">This website has some subtext that goes here under the main title. Its a smaller font
+                and
+                the color is lower contrast.</div>
+            <button>Sign up</button>
+        </div>
+        <div class="placeholder">
+            <p>this is a placeholder for an image</p>
+        </div>
     </div>
     <div class="container content-info">
         <h2>Some random information.</h2>
