--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
     <title>Landing Page</title>
 </head>
 
@@ -35,21 +35,23 @@
     </div>
     <div class="container content-info">
         <h2>Some random information.</h2>
-        <div class="image-box">
-            <div class="image"></div>
-            <div class="subtext">this is some subtext under an illustration or image</div>
-        </div>
-        <div class="image-box">
-            <div class="image"></div>
-            <div class="subtext">this is some subtext under an illustration or image</div>
-        </div>
-        <div class="image-box">
-            <div class="image"></div>
-            <div class="subtext">this is some subtext under an illustration or image</div>
-        </div>
-        <div class="image-box">
-            <div class="image"></div>
-            <div class="subtext">this is some subtext under an illustration or image</div>
+        <div class="tiles">
+            <div class="tile-box">
+                <div class="image"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="tile-box">
+                <div class="image"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="tile-box">
+                <div class="image"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="tile-box">
+                <div class="image"></div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
         </div>
     </div>
     <div class="container content-quote">
