--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,300&display=swap"
+        rel="stylesheet">
     <title>Landing Page</title>
 </head>
 
@@ -57,8 +58,9 @@
     <div class="container content-quote">
         <div class="quote">This is an inspiring quote or a testimonial from a customer. Maybe its just filling up space
             or maybe people will actually read it. Who knows? All I know is that it looks nice.
-        </div>
+        
         <div class="author">-Thor, God of Thunder</div>
+    </div>
     </div>
     <div class="container content-signup">
         <div class="cta-box">
