--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     <div class="container content-quote">
         <div class="quote">This is an inspiring quote or a testimonial from a customer. Maybe its just filling up space
             or maybe people will actually read it. Who knows? All I know is that it looks nice.
-        
-        <div class="author">-Thor, God of Thunder</div>
-    </div>
+
+            <div class="author">-Thor, God of Thunder</div>
+        </div>
     </div>
     <div class="container content-signup">
         <div class="cta-box">
@@ -70,7 +70,7 @@
         </div>
     </div>
     <div class="container footer">
-        Copyright © The Odin Project 2022
+        <div>Copyright © The Odin Project 2022</div>
     </div>
 
 </body>
