call to action section complete

--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
     </div>
     <div class="container content-signup">
         <div class="cta-box">
-            <h2>Call to action! it's time!</h2>
-            <div>Sign up for our product by clicking that button right over there!</div>
+            <div class="cta">
+                <h2>Call to action! it's time!</h2>
+                <div>Sign up for our product by clicking that button right over there!</div>
+            </div>
             <button>Sign up</button>
         </div>
     </div>
